[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Scenes/PlayerLifebar.gd" type="Script" id=1]
[ext_resource path="res://UI/Sprites/PLAYER_UI/UI_OUTER.png" type="Texture" id=2]
[ext_resource path="res://UI/Sprites/PLAYER_UI/UI_HEALTH_1.png" type="Texture" id=3]
[ext_resource path="res://UI/Sprites/PLAYER_UI/UI_HEALTH_2.png" type="Texture" id=4]
[ext_resource path="res://UI/Sprites/PLAYER_UI/UI_DASH.png" type="Texture" id=5]
[ext_resource path="res://UI/Sprites/PLAYER_UI/UI_BOOST.png" type="Texture" id=6]

[node name="PlayerUIbar" type="Container" index="0"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Mouse", "Rect" ]

[node name="Outer" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = -10.0
margin_right = 18.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ReLifeDelay" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TweenReLife" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ReLife" type="Node2D" parent="." index="3"]

editor/display_folded = true
modulate = Color( 255, 3, 0, 1 )
self_modulate = Color( 255, 255, 255, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Inner1" type="TextureProgress" parent="ReLife" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = -8.0
margin_right = -48.0
margin_bottom = 1.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "Textures" ]

[node name="Inner2" type="TextureProgress" parent="ReLife" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -51.0
margin_top = -8.0
margin_right = -32.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner3" type="TextureProgress" parent="ReLife" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -35.0
margin_top = -8.0
margin_right = -16.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner4" type="TextureProgress" parent="ReLife" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -19.0
margin_top = -8.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner5" type="TextureProgress" parent="ReLife" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = -8.0
margin_right = 16.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="TweenLife" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Life" type="Node2D" parent="." index="5"]

editor/display_folded = true
_sections_unfolded = [ "Visibility" ]

[node name="Inner1" type="TextureProgress" parent="Life" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = -8.0
margin_right = -48.0
margin_bottom = 1.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "Textures" ]

[node name="Inner2" type="TextureProgress" parent="Life" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -51.0
margin_top = -8.0
margin_right = -32.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner3" type="TextureProgress" parent="Life" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -35.0
margin_top = -8.0
margin_right = -16.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner4" type="TextureProgress" parent="Life" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -19.0
margin_top = -8.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Inner5" type="TextureProgress" parent="Life" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = -8.0
margin_right = 16.0
margin_bottom = -2.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="Dash" type="Node2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 0.10112, 0 )

[node name="Inner1" type="TextureProgress" parent="Dash" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -55.0
margin_right = -43.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 5 )
radial_initial_angle = 140.0
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Hint", "Margin", "Radial Fill", "Rect", "Textures", "Visibility" ]

[node name="Inner2" type="TextureProgress" parent="Dash" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -42.0
margin_right = -30.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 5 )
radial_initial_angle = 140.0
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Hint", "Margin", "Radial Fill", "Rect", "Textures", "Visibility" ]

[node name="Inner3" type="TextureProgress" parent="Dash" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_right = -17.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 5 )
radial_initial_angle = 140.0
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Hint", "Margin", "Radial Fill", "Rect", "Textures", "Visibility" ]

[node name="Boost" type="Node2D" parent="." index="7"]

editor/display_folded = true

[node name="Inner1" type="TextureProgress" parent="Boost" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -61.0
margin_top = 3.0
margin_right = -56.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 6 )
radial_initial_angle = 140.0
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Hint", "Margin", "Radial Fill", "Rect", "Textures", "Visibility" ]

[node name="Inner2" type="TextureProgress" parent="Boost" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -61.0
margin_top = 5.0
margin_right = -56.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 6 )
radial_initial_angle = 140.0
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Hint", "Margin", "Radial Fill", "Rect", "Textures", "Visibility" ]

[connection signal="timeout" from="ReLifeDelay" to="." method="_on_ReLifeDelay_timeout"]


